--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-image: url('../images/background.jpg');
+  background-size: cover;
+  background-position: cover;
+  background-attachment: fixed;
+  background-repeat: repeat-y;  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  text-align: center;
+  margin: 100px auto;
+  width: 90%;
+  min-height: 500px;
+  background-color: rgba(255, 255, 255, 0.541);
+  border-radius: 20px;
+  box-shadow: 0 5px 5px rgba(107, 60, 182, 0.493);
+  padding: 20px 15px;
+
+
 }
+
