--- a/src/index.css
+++ b/src/index.css
@@ -25,16 +25,16 @@ body{
 .forecastContainer{
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   /*background-color: aquamarine;*/
   padding: 10px;
   margin: 5px 0;
 }
 
 
-.thisDayData{
+.thisDayData, .FFContainer{
   text-align: center;
-  flex-grow: 0.2;
+  flex-grow: 1;
 }
 .currentDate{
   font-size: 20px;
@@ -134,8 +134,23 @@ body{
 }
 
 
-
-
+.fiveDaysForecast{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.fiveDaysForecast div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 100px;
+  font-weight: 400;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px 3px hsla(0, 3%, 65%, 0.842);
+}
 
 
 
