style: update general info container layout; center content and add gap between items

--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,8 @@ body{
 
 .generalInfoContainer{
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 20px;
   
 }
 .generalInfo{
